Заменил вызов статического метода String.format() вызовом нестатического метода formatted() на форматирующей строке.